UNRELEASED CHANGES:

New features:

* 

Enhancements:

* 

Fixes:

* Fix datepicker for locale usage

RELEASED VERSIONS:

v2.14.0 - 2019-05-16
--------------------

New features:

* Add WebAuthn Multi-factor authentication
* Add multi factor auth on oauth

Enhancements:

* Add Swiss CHF currency
* Add ability to enable DAV for some users
* Group relationships in create/edit forms
* Rewrite contact search fields
* Use string and array classes instead of helpers

Fixes:

* Fix dav url on dav settings page
* Fix debt direction on debt edit
* Fix schedule run in case cron can't run on fix hours
* Fix contact create with birthdate age 0
* Fix contact link create on job queue
* Fix /settings/dav route
* Fix display relationship without a ofContact property
* Fix register request validate
* Fix relationship create

v2.13.0 - 2019-04-07
--------------------

Enhancements:

* Add ability to update a relationship
* Add a sex type behind the gender
* Make gender optional on a contact profile
* Add a Collection::sortByCollator macro

Fixes:

* Fix destroy relationship
* Fix event dispatch for login (google2fa, u2f) events handle
* Fix address input label mistake
* Fix dashboard crash when reminder is empty
* Fix import vCard with Cyrillic encoding
* Fix import/export vcard with birthday with year unknown
* Fix contact missing create form
* Fix money format for non two "2" minor unit currencies

v2.12.1 - 2019-03-09
--------------------

Enhancements:

* Add eloquent relationships touches

Fixes:

* Fix reminders not being sent
* Fix setting deceased information with removing date and reminder
* Fix contact information update
* Fix adding people on activity create and update
* Fix setting a relationship without selecting any birthdate option
* Fix several typos in English language files
* Fix Journal view now includes Activities as intended
* Fix deleting a LifeEvent no longer deletes the associated Contact

v2.12.0 - 2019-02-09
--------------------

New features:
