@@ -3,7 +3,7 @@
     "/js/app.js": "/js/app.js?id=803643eadf42ca0bb1c8",
     "/css/app-ltr.css": "/css/app-ltr.css?id=1900312473bcfdb057c5",
     "/css/app-rtl.css": "/css/app-rtl.css?id=741e352bbf42a41da81e",
-    "/css/stripe.css": "/css/stripe.css?id=2de4e0ce557016a0327e",
+    "/css/stripe.css": "/css/stripe.css?id=746c8aaac01c56d3cee1",
     "/js/stripe.js": "/js/stripe.js?id=17fa0ae94aa36e4f9eb9",
     "/js/vendor.js": "/js/vendor.js?id=d0ff04b95a8275f0f2b7",
     "/js/u2f-api.js": "/js/u2f-api.js?id=1948d3efdfd801bed14a"
