@@ -10,6 +10,7 @@ Enhancements:
 
 Fixes:
 
+* Fix stripe payment UI
 * Fix datepicker for locale usage
 
 RELEASED VERSIONS:
